force-app/main/default/objects/SAPCasesSettings__c/SAPCasesSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuración Casos SAP</description>
    <label>PORSA SAP Cases</label>
</CustomObject>