force-app/main/default/objects/SAPCasesSettings__c/fields/CLAIM_ApproverEmails__c.field-meta.xml
<CustomField>
    <fullName>CLAIM_ApproverEmails__c</fullName>
    <description>Lista de usuarios con permisos para aprobar reclamaciones especiales</description>
    <label>CLAIM Approver Emails</label>
    <length>250</length>
    <type>Text</type>
</CustomField>