force-app/main/default/objects/SAPCasesSettings__c/fields/CLAIM_AssignTo__c.field-meta.xml
<CustomField>
    <fullName>CLAIM_AssignTo__c</fullName>
    <description>Assign new claims to this user (by email)</description>
    <label>CLAIM AssignTo</label>
    <type>Email</type>
</CustomField>