force-app/main/default/objects/SAPCasesSettings__c/fields/CLAIM_DebugEMail__c.field-meta.xml
<CustomField>
    <fullName>CLAIM_DebugEMail__c</fullName>
    <description>All claim emails addressed to this email when set</description>
    <label>CLAIM Debug EMail</label>
    <type>Email</type>
</CustomField>