force-app/main/default/objects/SAPCasesSettings__c/fields/CLAIM_EmailService__c.field-meta.xml
<CustomField>
    <fullName>CLAIM_EmailService__c</fullName>
    <description>Email address of the service handler responsible for processing incoming emails</description>
    <label>CLAIM Email Service</label>
    <length>150</length>
    <type>Text</type>
</CustomField>