force-app/main/default/objects/SAPCasesSettings__c/fields/CLAIM_FilesRequired__c.field-meta.xml
<CustomField>
    <fullName>CLAIM_FilesRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to require attachments when creating a claim</inlineHelpText>
    <label>CLAIM Require Files</label>
    <type>Checkbox</type>
</CustomField>