force-app/main/default/objects/SAPCasesSettings__c/fields/CLAIM_NotifyNewTo__c.field-meta.xml
<CustomField>
    <fullName>CLAIM_NotifyNewTo__c</fullName>
    <inlineHelpText>List of email addresses to notify when a claim is created. Separate multiple addresses using semicolons (;)</inlineHelpText>
    <label>CLAIM Notify New To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>