force-app/main/default/objects/SAPCasesSettings__c/fields/CLAIM_NotifyNewToOwner__c.field-meta.xml
<CustomField>
    <fullName>CLAIM_NotifyNewToOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically notifies the record owner when a claim is assigned to them</inlineHelpText>
    <label>CLAIM Notify Owner</label>
    <type>Checkbox</type>
</CustomField>