force-app/main/default/objects/SAPCasesSettings__c/fields/CLAIM_QueueDevName__c.field-meta.xml
<CustomField>
    <fullName>CLAIM_QueueDevName__c</fullName>
    <description>Developer Name of the queue that should receive the new cases</description>
    <label>CLAIM Queue Dev Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>