force-app/main/default/objects/SAPCasesSettings__c/fields/CLAIM_SendCustomerReceipt__c.field-meta.xml
<CustomField>
    <fullName>CLAIM_SendCustomerReceipt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sends an email to the custoemr when a claim is opened</description>
    <label>CLAIM Send Customer Receipt</label>
    <type>Checkbox</type>
</CustomField>