force-app/main/default/objects/SAPCasesSettings__c/fields/CLAIM_Signature__c.field-meta.xml
<CustomField>
    <fullName>CLAIM_Signature__c</fullName>
    <defaultValue>&quot;&lt;p&gt;After Sales Department&lt;br/&gt;PORCELANOSA&lt;/p&gt;&quot;</defaultValue>
    <label>CLAIM Signature</label>
    <type>TextArea</type>
</CustomField>