force-app/main/default/objects/SAPCasesSettings__c/fields/CLAIM_SignatureLogo__c.field-meta.xml
<CustomField>
    <fullName>CLAIM_SignatureLogo__c</fullName>
    <label>CLAIM Signature Logo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>