force-app/main/default/objects/SAPCasesSettings__c/fields/COL_AccountsChannels__c.field-meta.xml
<CustomField>
    <fullName>COL_AccountsChannels__c</fullName>
    <description>Distriobution channels associateed with accounts (separated by ;)</description>
    <label>COL Accounts Channels</label>
    <length>30</length>
    <type>Text</type>
</CustomField>