force-app/main/default/objects/SAPCasesSettings__c/fields/COL_AccountsEmails__c.field-meta.xml
<CustomField>
    <fullName>COL_AccountsEmails__c</fullName>
    <description>Emails of the accounts department to receive notifications when a credit note is raised</description>
    <label>COL Accounts Emails</label>
    <length>200</length>
    <type>Text</type>
</CustomField>