force-app/main/default/objects/SAPCasesSettings__c/fields/COL_AfterSalesChannels__c.field-meta.xml
<CustomField>
    <fullName>COL_AfterSalesChannels__c</fullName>
    <description>List of channels associated with after salaes (separated by ;)</description>
    <label>COL After Sales Channels</label>
    <length>30</length>
    <type>Text</type>
</CustomField>