force-app/main/default/objects/SAPCasesSettings__c/fields/COL_AfterSalesEmails__c.field-meta.xml
<CustomField>
    <fullName>COL_AfterSalesEmails__c</fullName>
    <description>After Sales emails for credit note notifications</description>
    <label>COL After Sales Emails</label>
    <length>200</length>
    <type>Text</type>
</CustomField>