force-app/main/default/objects/SAPCasesSettings__c/fields/COL_ApproverEmails__c.field-meta.xml
<CustomField>
    <fullName>COL_ApproverEmails__c</fullName>
    <inlineHelpText>List of emails of the approvers (separated by ;). The approvers have to be salesforce users and have the poermission set CASEApproveCollections</inlineHelpText>
    <label>COL Collection Approver Emails</label>
    <length>150</length>
    <type>Text</type>
</CustomField>