force-app/main/default/objects/SAPCasesSettings__c/fields/COL_AskManagerApproval__c.field-meta.xml
<CustomField>
    <fullName>COL_AskManagerApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Requeste&apos;s the manager approval when the return is beyoud our policy days</inlineHelpText>
    <label>COL Ask Manager Approval</label>
    <type>Checkbox</type>
</CustomField>