force-app/main/default/objects/SAPCasesSettings__c/fields/COL_CustomerReturns__c.field-meta.xml
<CustomField>
    <fullName>COL_CustomerReturns__c</fullName>
    <defaultValue>true</defaultValue>
    <label>COL_CustomerReturns</label>
    <type>Checkbox</type>
</CustomField>