force-app/main/default/objects/SAPCasesSettings__c/fields/COL_PolicyDays__c.field-meta.xml
<CustomField>
    <fullName>COL_PolicyDays__c</fullName>
    <defaultValue>28</defaultValue>
    <inlineHelpText>Days established by the return policy during which a product can be returned.</inlineHelpText>
    <label>COL Policy Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>