force-app/main/default/objects/SAPCasesSettings__c/fields/COL_RestockingCharges__c.field-meta.xml
<CustomField>
    <fullName>COL_RestockingCharges__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Apply restocking charges by default</description>
    <label>COL Restocking Charges</label>
    <type>Checkbox</type>
</CustomField>