force-app/main/default/objects/SAPCasesSettings__c/fields/COL_ReturnsWarehouse__c.field-meta.xml
<CustomField>
    <fullName>COL_ReturnsWarehouse__c</fullName>
    <description>Lista de almacenes seleccionables para devoluciones (separados por ;)</description>
    <label>COL Returns Warehouse</label>
    <length>30</length>
    <type>Text</type>
</CustomField>