force-app/main/default/objects/SAPCasesSettings__c/fields/COL_TransportEmails__c.field-meta.xml
<CustomField>
    <fullName>COL_TransportEmails__c</fullName>
    <inlineHelpText>Transport Emails to receive alerts when a new collection note is created. If blank, no alert is sent.</inlineHelpText>
    <label>COL Collection Transport Emails</label>
    <length>150</length>
    <type>Text</type>
</CustomField>